<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/fragment_job_board">

    <fragment
        android:id="@+id/fragment_job_board"
        android:name="com.example.militaryservicecompanysearch.presentation.jobboard.JobBoardFragment"
        android:label="@string/job_board"
        tools:layout="@layout/fragment_job_board" >
        <action
            android:id="@+id/action_fragment_job_board_to_fragment_job_detail"
            app:destination="@id/fragment_job_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_fragment_job_board_to_sectorSelectionFragment"
            app:destination="@id/sectorSelectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_job_detail"
        android:name="com.example.militaryservicecompanysearch.presentation.jobdetail.JobDetailFragment"
        android:label="@string/job_detail"
        tools:layout="@layout/fragment_job_detail">
        <argument
            android:name="RecruitmentNotice"
            app:argType="com.example.militartservicecompanysearch.core.model.RecruitmentNotice" />
    </fragment>
    <fragment
        android:id="@+id/sectorSelectionFragment"
        android:name="com.example.militaryservicecompanysearch.presentation.sectorselection.SectorSelectionFragment"
        android:label="@string/sector_selection"
        tools:layout="@layout/fragment_sector_selection" />
    <fragment
        android:id="@+id/fragment_wish_recruitment_notice"
        android:name="com.example.militaryservicecompanysearch.presentation.wishrecruitmentnotice.WishRecruitmentNoticeFragment"
        android:label="@string/wish_recruitment_notice"
        tools:layout="@layout/fragment_wish_recruitment_notice" >
        <action
            android:id="@+id/action_fragment_wish_recruitment_notice_to_fragment_job_detail"
            app:destination="@id/fragment_job_detail" />
    </fragment>
    <fragment
        android:id="@+id/fragment_job_search"
        android:name="com.example.militaryservicecompanysearch.presentation.jobsearch.JobSearchFragment"
        android:label="@string/job_search"
        tools:layout="@layout/fragment_job_search" >
        <action
            android:id="@+id/action_fragment_job_search_to_fragment_job_detail"
            app:destination="@id/fragment_job_detail" />
    </fragment>

</navigation>
